--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@trpc/react": "10.0.0-alpha.38",
     "@trpc/server": "10.0.0-alpha.38",
     "@types/ms": "^0.7.31",
+    "@types/nprogress": "^0.2.0",
     "hash-wasm": "^4.9.0",
     "jotai": "^1.7.5",
     "ms": "^2.1.3",
     "myzod": "^1.8.8",
     "next": "12.2.2",
     "next-auth": "^4.10.0",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
